--- a/HEScoreMicro.UI/src/app/views/pv-system/pv-system.component.html
+++ b/HEScoreMicro.UI/src/app/views/pv-system/pv-system.component.html
@@ -133,7 +133,7 @@
           <button type="button" class="bg-primary btn-style" (click)="onSave()">
             {{ this.pVSystemForm.value?.id ? "Update" : "Save" }}
           </button>
-          <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
+          <button type="button" class="bg-secondary btn-style" [disabled]="!this.pVSystemForm.value?.id" (click)="move.emit(true)">
             Next
           </button>
         </div>
