--- a/HEScoreMicro.UI/src/app/views/zone-roof/zone-roof.component.html
+++ b/HEScoreMicro.UI/src/app/views/zone-roof/zone-roof.component.html
@@ -458,7 +458,7 @@
         <button type="button" class="bg-primary btn-style" (click)="onSave()">
           {{ this.zoneRoofForm.value?.id ? "Update" : "Save" }}
         </button>
-        <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
+        <button type="button" class="bg-secondary btn-style" [disabled]="!this.zoneRoofForm.value?.id" (click)="move.emit(true)">
           Next
         </button>
       </div>
