--- a/HEScoreMicro.UI/src/app/views/energy-star/energy-star.component.html
+++ b/HEScoreMicro.UI/src/app/views/energy-star/energy-star.component.html
@@ -106,7 +106,7 @@
           <button type="button" class="bg-primary btn-style" (click)="onSave()">
             {{ this.energyStarForm.value?.id ? "Update" : "Save" }}
           </button>
-          <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
+          <button type="button" class="bg-secondary btn-style" [disabled]="!this.energyStarForm.value?.id" (click)="move.emit(true)">
             Next
           </button>
         </div>
