--- a/HEScoreMicro.UI/src/app/views/zone-floor/zone-floor.component.html
+++ b/HEScoreMicro.UI/src/app/views/zone-floor/zone-floor.component.html
@@ -145,7 +145,7 @@
         <button type="button" class="bg-primary btn-style" (click)="onSave()">
           {{ this.zoneFloorForm.value?.id ? "Update" : "Save" }}
         </button>
-        <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
+        <button type="button" class="bg-secondary btn-style" [disabled]="!this.zoneFloorForm.value?.id" (click)="move.emit(true)">
           Next
         </button>
       </div>
