--- a/HEScoreMicro.UI/src/app/views/zone-wall/zone-wall.component.html
+++ b/HEScoreMicro.UI/src/app/views/zone-wall/zone-wall.component.html
@@ -119,7 +119,7 @@
         <button type="button" class="bg-primary btn-style" (click)="onSave()">
           {{ this.zoneWallForm.value?.id ? "Update" : "Save" }}
         </button>
-        <button type="button" class="bg-secondary btn-style" (click)="move.emit(true)">
+        <button type="button" class="bg-secondary btn-style" [disabled]="!this.zoneWallForm.value?.id" (click)="move.emit(true)">
           Next
         </button>
       </div>
