--- a/HEScoreMicro.UI/src/styles.scss
+++ b/HEScoreMicro.UI/src/styles.scss
@@ -117,6 +117,11 @@ label {
 
 @media screen and (max-width: 768px) {
   :root {
-    --input-margin: 15px 0px 10px 0px !important;
+    --input-margin: 15px 0px 5px 0px !important;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    --bs-modal-width: 70% !important;
   }
 }
