--- a/HEScoreMicro.UI/src/app/views/common-insulation-model/common-insulation-model.component.html
+++ b/HEScoreMicro.UI/src/app/views/common-insulation-model/common-insulation-model.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title pull-left">{{ title }}</h4>
-  <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+  <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="close()">
     <span aria-hidden="true" class="visually-hidden">&times;</span>
   </button>
 </div>
@@ -56,13 +56,16 @@
             </h3>
           </div>
           <div class="d-flex justify-content-center align-items-center">
-            <button class="btn btn-success py-2 px-3"
-              [disabled]="calculatedRValueObj.invalid">Use Calculate R-Value</button>
+            <button class="btn btn-success py-2 px-3" (click)="emitValueAndClose(math.round(calculatedRValueObj.get('insulationType')?.value *
+              calculatedRValueObj.get('insulationDepth')?.value *
+              ((calculatedRValueObj.get('insulationSubType')?.value ===
+              'Batt')?calculatedRValueObj.get('insulationQuality')?.value :1)))"
+              [disabled]="calculatedRValueObj.invalid">Use Calculate
+              R-Value</button>
           </div>
         </div>
       </ng-container>
       <div class="w-100 border mt-3 mb-4"></div>
-
       <ng-container class="col-12" formArrayName="avgWeightedRValues">
         <div class="row row-gap-4">
           <div class="col-md-9">
@@ -91,16 +94,11 @@
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="input-box mt-0 mb-1 d-flex flex-column h-100">
+                    <div class="input-box mt-0 mb-1">
                       <label for="columnB" class="">
                         Component {{rValuesIndex+1}} UA
                       </label>
-                      <h6 class="border flex-grow-1 mb-1 d-flex align-items-center ps-3">
-                        {{
-                        (rValuesItem.get('columnA')?.value *
-                        rValuesItem.get('columnB')?.value)
-                        }}
-                      </h6>
+                      <input formControlName="columnC" type="number" id="columnC" />
                     </div>
                   </div>
                 </ng-container>
@@ -111,27 +109,25 @@
             <div class="mb-3 border p-2 rounded-2">
               <h5>Cavity U-Factor</h5>
               <h3 class="fw-bold border rounded-2 m-0 p-3 text-center">
-                20
+                {{cavityUFactor}}
               </h3>
             </div>
             <div class="mb-3 border p-2 rounded-2 border-success">
               <h5>Weighted Avg. R-Value</h5>
               <h3 class="fw-bold border rounded-2 m-0 p-3 text-center">
-                10
+                {{WeightedAvgRValue}}
               </h3>
             </div>
           </div>
           <div class="d-flex justify-content-center align-items-center col-12">
-            <button class="btn btn-success py-2 px-3">Use Weighted Avg. R-Value</button>
+            <button class="btn btn-success py-2 px-3" [disabled]="!cavityUFactor"
+              (click)="emitValueAndClose(WeightedAvgRValue)">Use Weighted Avg. R-Value</button>
           </div>
         </div>
       </ng-container>
-
     </div>
-
-
   </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default border" (click)="bsModalRef.hide()">Cancel</button>
+  <button type="button" class="btn btn-default border" (click)="close()">Cancel</button>
 </div>
